added first parser test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,9 +33,15 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     find_package(GTest REQUIRED)
     include_directories(${GTEST_INCLUDE_DIRS})
 
+    set(TEST_SRC ${SOURCES})
+    set(EXCLUDE_FILE "main.cpp")
+    list(FILTER TEST_SRC EXCLUDE REGEX ${EXCLUDE_FILE})
+    file(GLOB_RECURSE GTEST_SOURCE "tests/*.cpp")
+
     # Create a separate executable for tests
-    add_executable(test_sc test/my_tests.cpp ${GTEST_SOURCE})
-    target_link_libraries(test_sc GTest::gtest GTest::gtest_main)
+    add_executable(test_sc ${GTEST_SOURCE} ${TEST_SRC})
+    target_include_directories(test_sc PRIVATE include/)
+    target_link_libraries(test_sc GTest::gtest GTest::gtest_main sjp)
 
     # Add a test that runs the test executable
     add_test(NAME unit_test COMMAND test_sc)
