added index set for fast union/intersections

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ target_link_libraries(sc sjp)
 
 # Enable Testing only in Debug mode
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    target_compile_options(sc PRIVATE -Wall -Wextra -Wpedantic -O0 -ggdb -std=c++23)
+    target_compile_options(sc PRIVATE -Wall -Wextra -Wpedantic -Wconversion -O0 -ggdb -std=c++23)
     set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
     # Testing
     enable_testing()
